<resources>
    <string name="app_name">FamilyMapClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_details">Login Details</string>
    <string name="ServerHost">Server Host:</string>
    <string name="ServerPort">Server Port:</string>
    <string name="Username">User Name:</string>
    <string name="Password">Password:</string>
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="Email">Email:</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="SignIn">SIGN IN</string>
    <string name="Register">REGISTER</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_label">FamilyMap</string>
    <string name="search_hint">Search persons/events</string>
</resources>