<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/login_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                app:columnCount="2"
                app:rowCount="9">

                <EditText
                    android:id="@+id/hostEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Server Host"
                    android:inputType="textPersonName"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/hostText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ServerHost"
                    app:layout_column="0"
                    app:layout_row="0" />


                <TextView
                    android:id="@+id/hostText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ServerPort"
                    app:layout_column="0"
                    app:layout_row="1" />


                <TextView
                    android:id="@+id/hostText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Username"
                    app:layout_column="0"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/hostText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Password"
                    app:layout_column="0"
                    app:layout_row="4" />

                <TextView
                    android:id="@+id/hostText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FirstName"
                    app:layout_column="0"
                    app:layout_row="5" />

                <TextView
                    android:id="@+id/hostText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LastName"
                    app:layout_column="0"
                    app:layout_row="6" />

                <TextView
                    android:id="@+id/hostText7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    app:layout_column="0"
                    app:layout_row="7" />

                <TextView
                    android:id="@+id/hostText8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Gender"
                    app:layout_column="0"
                    app:layout_row="8" />

                <EditText
                    android:id="@+id/portEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Server Port"
                    android:inputType="textPersonName"
                    app:layout_column="1"
                    app:layout_row="1" />

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    app:layout_column="1"
                    app:layout_row="3" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPersonName"
                    app:layout_column="1"
                    app:layout_row="4" />

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="First Name"
                    android:inputType="textPersonName"
                    app:layout_column="1"
                    app:layout_row="5" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Last Name"
                    android:inputType="textPersonName"
                    app:layout_column="1"
                    app:layout_row="6" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textPersonName"
                    app:layout_column="1"
                    app:layout_row="7" />

                <RadioGroup
                    android:id="@+id/genderGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_column="1"
                    app:layout_row="8">

                    <RadioButton
                        android:id="@+id/maleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/Male" />

                    <RadioButton
                        android:id="@+id/femaleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Female" />
                </RadioGroup>

            </androidx.gridlayout.widget.GridLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SignIn" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="10dp" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Register" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>